--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
   >
     <span>Education</span>
   </button>
-  <button mat-menu-item class="border-top">
+  <button mat-menu-item>
     <a href="mailto:matt.blum@live.com">Contact</a>
   </button>
   <button
@@ -60,7 +60,7 @@
     <hr wmAnimate="fadeIn" delay="250ms" />
 
     <h3 class="description" wmAnimate="fadeInDown" delay="500ms">
-      Front end Developer
+      Front End Developer
     </h3>
     <!-- .description -->
 
@@ -139,7 +139,7 @@
     >
       Education
     </li>
-    <li class="border-top" wmAnimate="fadeInRight" aos delay="1250ms">
+    <li class="divide" wmAnimate="fadeInRight" aos delay="1250ms">
       <a href="mailto:matt.blum@live.com">Contact</a>
     </li>
     <li
@@ -341,7 +341,7 @@
       </div>
       <!-- .subsection -->
       <div class="subsection">
-        <div class="content bg-off-white">
+        <div class="content bg-alt">
           <h2>
             <a href="http://www.accelgen.com" target="_blank"
               >Accelerated Genetics</a
@@ -431,7 +431,7 @@
       </div>
       <!-- .subsection -->
       <div class="subsection">
-        <div class="content bg-off-white">
+        <div class="content bg-alt">
           <h2>
             <a href="https://shop.accelgen.com" target="_blank">Shop</a>
           </h2>
@@ -624,7 +624,7 @@
         <!-- .subsection -->
       </div>
       <!-- .content -->
-      <div class="content bg-off-white">
+      <div class="content bg-alt">
         <div class="subsection">
           <div class="subsection-header">
             <span
@@ -751,7 +751,7 @@
         </div>
         <!-- .col -->
         <div class="col-sm-12 col-md-6">
-          <div class="content bg-off-white">
+          <div class="content bg-alt">
             <div class="subsection">
               <div class="subsection-header">
                 <span
