--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,9 +20,11 @@ nav.desktop {
 
 .landing {
   align-items: center;
-  background-image: url("../assets/images/landing/subtle.webp");
+  // background-image: url("../assets/images/landing/subtle-black.webp");
+  background: linear-gradient(rgba(0, 119, 182, 0.5), rgba(0, 150, 199, 0.5)),
+    url("../assets/images/landing/subtle-black.webp");
   background-size: cover;
-  color: var(--dark-gray);
+  color: var(--white-off);
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -47,10 +49,9 @@ nav.desktop {
 
   hr {
     border: 0;
-    border-top: 1px solid var(--dark-gray);
+    border-top: 1px solid var(--primary);
     display: block;
     height: 1px;
-    // margin: 1em 0;
     margin: 0;
     padding: 0;
   }
@@ -92,13 +93,7 @@ nav.desktop {
     height: 48px;
     justify-content: center;
     position: absolute;
-    // transition: background-color 0.3s;
     width: 100%;
-
-    // &:hover {
-    //   background-color: var(--black);
-    //   transition: background-color 0.2s, color 0.2s;
-    // }
 
     .down {
       align-items: baseline;
@@ -117,7 +112,7 @@ nav.desktop {
   text-align: center;
 
   img {
-    border: 1px solid var(--white-smoke);
+    border: 1px solid var(--border-img);
     cursor: pointer;
     margin-bottom: 15px;
     max-height: 300px;
