--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,11 +1,16 @@
 :root {
-  --primary: rgb(34, 179, 235);
-  --secondary: rgb(85, 197, 240);
-  --white: rgb(255, 255, 255);
-  --off-white: #f9f9f9;
-  --white-smoke: #f5f5f5;
-  --black: rgb(0, 0, 0);
-  --dark-gray: #333;
-  --gray: #3d3d3d;
-  --light-gray: #818181;
+  --primary: #0077b6; // rgb(0, 119, 182)
+  --secondary: #0096c7; // rgb(0, 150, 199)
+  --bg: #fff;
+  --bg-alt: #f9f9f9;
+  --bg-body: #222;
+  --bg-header: #333;
+  --bg-nav: var(--bg-header);
+  --black: #000;
+  --border-img: #f5f5f5;
+  --border-menu: var(--bg-body);
+  --star: var(--primary);
+  --star-empty: #ccc;
+  --white: #fff;
+  --white-off: #f9f9f9;
 }
