--- a/src/styles/base/_medias.scss
+++ b/src/styles/base/_medias.scss
@@ -31,6 +31,10 @@
       position: fixed;
       top: 0;
       transition: padding 1.25s;
+
+      ul li:first-child {
+        border-top: none;
+      }
     }
 
     ul {
@@ -39,7 +43,8 @@
 
       li {
         align-items: center;
-        background-color: var(--dark-gray);
+        background-color: var(--bg-nav);
+        border-top: 1px solid var(--border-menu);
         color: var(--white);
         cursor: pointer;
         display: flex;
@@ -56,16 +61,19 @@
         }
 
         &:hover {
-          background-color: var(--black);
-          transition: background-color 0.3s;
+          background-color: var(--primary);
+          color: var(--white);
+          transition: background-color 0.3s, color 0.3s;
         }
 
         &.active {
           background-color: var(--primary);
+          color: var(--white);
+          transition: background-color 0.2s, color 0.2s;
         }
 
-        &.border-top {
-          border-top: 1px solid var(--light-gray);
+        &.divide {
+          margin-top: 8px;
         }
 
         a {
@@ -74,12 +82,16 @@
           color: var(--white);
           height: 100%;
           justify-content: center;
+          transition: background-color 0.3s, color 0.3s;
           width: 100%;
 
           &:hover,
           &:active,
           &:focus {
+            background-color: var(--primary);
+            color: var(--white);
             text-decoration: none;
+            transition: background-color 0.2s, color 0.2s;
           }
         }
       }
