--- a/src/styles/components/_mat-menu.scss
+++ b/src/styles/components/_mat-menu.scss
@@ -1,28 +1,31 @@
 .cdk-overlay-pane {
-  display: none;
-
+  right: 16px;
   .mat-menu-panel {
     border-radius: 0;
+    margin-right: 16px;
 
     .mat-menu-content:not(:empty) {
       padding-bottom: 0;
       padding-top: 0;
 
       button {
-        background-color: var(--dark-gray);
-        color: var(--white);
+        background-color: var(--white);
+        border: 1px solid var(--black);
+        border-bottom: 0;
+        color: var(--black);
         text-transform: uppercase;
+
+        &:last-child {
+          border-bottom: 1px solid var(--black);
+        }
 
         &.active {
           background-color: var(--primary);
-        }
-
-        &.border-top {
-          border-top: 1px solid var(--light-gray);
+          color: var(--white);
         }
 
         a {
-          color: var(--white);
+          color: var(--black);
 
           &:hover,
           &:active,
@@ -32,7 +35,8 @@
         }
 
         mat-icon {
-          color: var(--white);
+          color: var(--black);
+          margin: 0;
         }
       }
     }
