--- a/src/styles/palettes/_resume-mat-palette.scss
+++ b/src/styles/palettes/_resume-mat-palette.scss
@@ -1,18 +1,18 @@
 $mat-resume-primary: (
-  50: #e4f6fd,
-  100: #bde8f9,
-  200: #91d9f5,
-  300: #64caf1,
-  400: #43beee,
-  500: #22b3eb,
-  600: #1eace9,
-  700: #19a3e5,
-  800: #149ae2,
-  900: #0c8bdd,
-  A100: #ffffff,
-  A200: #d4edff,
-  A400: #a1d7ff,
-  A700: #88ccff,
+  50: #e0eff6,
+  100: #b3d6e9,
+  200: #80bbdb,
+  300: #4da0cc,
+  400: #268bc1,
+  500: #0077b6,
+  600: #006faf,
+  700: #0064a6,
+  800: #005a9e,
+  900: #00478e,
+  A100: #bad8ff,
+  A200: #87baff,
+  A400: #549dff,
+  A700: #3b8eff,
   contrast: (
     50: $dark-primary-text,
     100: $dark-primary-text,
@@ -32,20 +32,20 @@ $mat-resume-primary: (
 );
 
 $mat-resume-secondary: (
-  50: #ebf8fd,
-  100: #cceefb,
-  200: #aae2f8,
-  300: #88d6f5,
-  400: #6fcef2,
-  500: #55c5f0,
-  600: #4ebfee,
-  700: #44b8ec,
-  800: #3bb0e9,
-  900: #2aa3e5,
-  A100: #ffffff,
-  A200: #f1faff,
-  A400: #bee7ff,
-  A700: #a4ddff,
+  50: #e0f2f8,
+  100: #b3e0ee,
+  200: #80cbe3,
+  300: #4db6d8,
+  400: #26a6cf,
+  500: #0096c7,
+  600: #008ec1,
+  700: #0083ba,
+  800: #0079b3,
+  900: #0068a6,
+  A100: #d0ebff,
+  A200: #9dd5ff,
+  A400: #6abfff,
+  A700: #51b4ff,
   contrast: (
     50: $dark-primary-text,
     100: $dark-primary-text,
