--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,7 +14,7 @@ body {
 }
 
 body {
-  background-color: var(--gray);
+  background-color: var(--bg-body);
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
@@ -56,22 +56,22 @@ mat-card {
     padding: 16px;
 
     .star {
-      color: var(--primary);
+      color: var(--star);
       pointer-events: none;
     }
 
     .star-empty {
-      color: var(--light-gray);
+      color: var(--star-empty);
       pointer-events: none;
     }
   }
 
   .header {
     margin-bottom: 20px;
+    text-transform: uppercase;
 
     .title {
       background-color: var(--primary);
-      // box-shadow: 5px 5px var(--secondary);
       color: var(--white);
       float: left;
       font-size: 36px;
@@ -87,7 +87,6 @@ mat-card {
       font-size: 12px;
       letter-spacing: 1px;
       line-height: 1.5;
-      // min-width: 200px;
       padding: 16px 30px;
       text-transform: uppercase;
     }
@@ -143,7 +142,7 @@ $accent-line-height: 76px;
 
     a,
     span {
-      background-color: var(--dark-gray);
+      background-color: var(--bg-header);
       color: var(--white);
       transition: background-color 0.2s;
     }
@@ -153,11 +152,6 @@ $accent-line-height: 76px;
       float: left;
       padding: 20px;
       text-decoration: none;
-
-      &:hover {
-        background-color: var(--black);
-        transition: background-color 0.3s;
-      }
     }
 
     span {
