Minor style updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -139,10 +139,11 @@
     >
       Education
     </li>
-    <li class="divide" wmAnimate="fadeInRight" aos delay="1250ms">
+    <li class="border-top" wmAnimate="fadeInRight" aos delay="1250ms">
       <a href="mailto:matt.blum@live.com">Contact</a>
     </li>
     <li
+      class="border-top"
       (click)="scrollToId('landing', SECTION_Y_OFFSET)"
       wmAnimate="fadeInRight"
       aos
