--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -8,7 +8,7 @@
   --bg-nav: var(--bg-header);
   --black: #000;
   --border-img: #f5f5f5;
-  --border-menu: var(--bg-body);
+  --border-nav: var(--bg-body);
   --star: var(--primary);
   --star-empty: #ccc;
   --white: #fff;
