Increase mobile nav tap target size

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,8 +6,9 @@ nav.mobile.fixed {
 
 nav.mobile {
   button {
+    height: 48px;
     position: fixed;
-    top: -36px;
+    top: -48px;
     right: 16px;
     transition: top 0.3s;
     z-index: 10;
