--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -117,7 +117,13 @@ nav.desktop {
     cursor: pointer;
     margin-bottom: 15px;
     max-height: 300px;
+    transition: transform 0.2s;
     width: auto;
+
+    &:hover {
+      transform: scale(1.1);
+      transition: transform 0.3s;
+    }
   }
 }
 
