--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -173,7 +173,8 @@ $accent-line-height: 76px;
 }
 
 .no-webp .landing {
-  background-image: url("../assets/images/landing/subtle.jpg") !important;
+  background: linear-gradient(rgba(0, 119, 182, 0.5), rgba(0, 150, 199, 0.5)),
+    url("../assets/images/landing/subtle-black.webp") !important;
 }
 
 // Safari 100vh fix
