--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,7 +21,10 @@ nav.desktop {
 
 .landing {
   align-items: center;
-  background: linear-gradient(rgba(0, 119, 182, 0.5), rgba(0, 150, 199, 0.5)),
+  background-image: linear-gradient(
+      rgba(0, 119, 182, 0.5),
+      rgba(0, 150, 199, 0.5)
+    ),
     url("../assets/images/landing/subtle-black.webp");
   background-size: cover;
   color: var(--white-off);
