--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -173,7 +173,10 @@ $accent-line-height: 76px;
 }
 
 .no-webp .landing {
-  background: linear-gradient(rgba(0, 119, 182, 0.5), rgba(0, 150, 199, 0.5)),
+  background-image: linear-gradient(
+      rgba(0, 119, 182, 0.5),
+      rgba(0, 150, 199, 0.5)
+    ),
     url("../assets/images/landing/subtle-black.webp") !important;
 }
 
