--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -177,7 +177,7 @@ $accent-line-height: 76px;
       rgba(0, 119, 182, 0.5),
       rgba(0, 150, 199, 0.5)
     ),
-    url("../assets/images/landing/subtle-black.webp") !important;
+    url("../assets/images/landing/subtle-black.jpg") !important;
 }
 
 // Safari 100vh fix
