--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,56 +1,7 @@
-<nav class="mobile" [ngClass]="{ fixed: isPastOneHundredViewHeight }">
-  <button
-    mat-flat-button
-    color="primary"
-    [matMenuTriggerFor]="menu"
-    aria-label="Example icon-button with a menu"
-  >
-    <mat-icon>menu</mat-icon>
-  </button>
-</nav>
-
-<mat-menu #menu="matMenu">
-  <button
-    mat-menu-item
-    (click)="scrollToId('skills', SECTION_Y_OFFSET)"
-    [ngClass]="{ active: sectionInView === 'skills' }"
-  >
-    <span>Skills</span>
-  </button>
-  <button
-    mat-menu-item
-    (click)="scrollToId('projects', SECTION_Y_OFFSET)"
-    [ngClass]="{ active: sectionInView === 'projects' }"
-  >
-    <span>Projects</span>
-  </button>
-  <button
-    mat-menu-item
-    (click)="scrollToId('career', SECTION_Y_OFFSET)"
-    [ngClass]="{ active: sectionInView === 'career' }"
-  >
-    <span>Career</span>
-  </button>
-  <button
-    mat-menu-item
-    (click)="scrollToId('education', SECTION_Y_OFFSET)"
-    [ngClass]="{ active: sectionInView === 'education' }"
-  >
-    <span>Education</span>
-  </button>
-  <button mat-menu-item>
-    <a href="mailto:matt.blum@live.com">Contact</a>
-  </button>
-  <button
-    mat-menu-item
-    (click)="scrollToId('landing', SECTION_Y_OFFSET)"
-    class="text-center"
-  >
-    <mat-icon aria-hidden="false" aria-label="Up Arrow"
-      >keyboard_arrow_up</mat-icon
-    >
-  </button>
-</mat-menu>
+<app-nav-mobile
+  [isPastOneHundredViewHeight]="isPastOneHundredViewHeight"
+  [sectionInView]="sectionInView"
+></app-nav-mobile>
 
 <section id="landing" class="landing" spyTarget="landing">
   <div class="landing-content">
@@ -73,7 +24,7 @@
 
   <div
     class="down-wrapper"
-    (click)="scrollToId('header')"
+    (click)="utilityService.scrollToId('header')"
     wmAnimate="fadeInUp"
     delay="250ms"
   >
@@ -88,7 +39,7 @@
 <nav class="desktop" [ngClass]="{ fixed: isPastOneHundredViewHeight }">
   <ul>
     <li
-      (click)="scrollToId('skills', SECTION_Y_OFFSET)"
+      (click)="utilityService.scrollToId('skills', SECTION_Y_OFFSET)"
       [ngClass]="{ active: sectionInView === 'skills' }"
       wmAnimate="fadeInRight"
       aos
@@ -97,7 +48,7 @@
       Skills
     </li>
     <li
-      (click)="scrollToId('projects', SECTION_Y_OFFSET)"
+      (click)="utilityService.scrollToId('projects', SECTION_Y_OFFSET)"
       [ngClass]="{ active: sectionInView === 'projects' }"
       wmAnimate="fadeInRight"
       aos
@@ -106,7 +57,7 @@
       Projects
     </li>
     <li
-      (click)="scrollToId('career', SECTION_Y_OFFSET)"
+      (click)="utilityService.scrollToId('career', SECTION_Y_OFFSET)"
       [ngClass]="{ active: sectionInView === 'career' }"
       wmAnimate="fadeInRight"
       aos
@@ -115,7 +66,7 @@
       Career
     </li>
     <li
-      (click)="scrollToId('education', SECTION_Y_OFFSET)"
+      (click)="utilityService.scrollToId('education', SECTION_Y_OFFSET)"
       [ngClass]="{ active: sectionInView === 'education' }"
       wmAnimate="fadeInRight"
       aos
@@ -128,7 +79,7 @@
     </li>
     <li
       class="border-top"
-      (click)="scrollToId('landing', SECTION_Y_OFFSET)"
+      (click)="utilityService.scrollToId('landing', SECTION_Y_OFFSET)"
       wmAnimate="fadeInRight"
       aos
       delay="1500ms"
