--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,6 +1,6 @@
 :root {
-  --primary: #0077b6; // rgb(0, 119, 182)
-  --secondary: #0096c7; // rgb(0, 150, 199)
+  --primary: #0077b6;
+  --secondary: #0096c7;
   --bg: #fff;
   --bg-alt: #f9f9f9;
   --bg-body: #222;
