--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,7 @@
 @import "~@angular/material/theming";
-// @import "~bootstrap/dist/css/bootstrap-grid.min";
 
 @import "./base/colors";
+@import "./base/break-points";
 @import "./base/lib";
 @import "./components/mat-buttons";
 @import "./components/mat-cards";
