--- a/src/app/components/nav-desktop/nav-desktop.component.scss
+++ b/src/app/components/nav-desktop/nav-desktop.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/base/vars";
+@import "../../../styles/base/break-points";
 
 nav.desktop {
   display: none;
@@ -19,10 +19,6 @@ nav.desktop {
       position: fixed;
       top: 0;
       transition: padding 1.25s;
-
-      // ul li:first-child {
-      //   border-top: none;
-      // }
     }
 
     ul {
@@ -32,7 +28,6 @@ nav.desktop {
       li {
         align-items: center;
         background-color: var(--bg-nav);
-        // border-top: 1px solid var(--border-nav);
         color: var(--white);
         cursor: pointer;
         display: flex;
