Refactor sections into separate components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,360 +3,26 @@
   [sectionInView]="sectionInView"
 ></app-nav-mobile>
 
-<section id="landing" class="landing" spyTarget="landing">
-  <div class="landing-content">
-    <h1 class="title" wmAnimate="fadeInUp">Matt Blum</h1>
-
-    <hr wmAnimate="fadeIn" delay="250ms" />
-
-    <h3 class="description" wmAnimate="fadeInDown" delay="500ms">
-      Front End Developer
-    </h3>
-
-    <div class="cta">
-      <div class="button-wrapper" wmAnimate="fadeInDown" delay="750ms">
-        <a href="mailto:matt.blum@live.com" mat-raised-button color="primary">
-          <mat-icon>email</mat-icon>Contact
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <div
-    class="down-wrapper"
-    (click)="utilityService.scrollToId('header')"
-    wmAnimate="fadeInUp"
-    delay="250ms"
-  >
-    <div class="down">
-      <mat-icon aria-hidden="false" aria-label="Down Arrow"
-        >keyboard_arrow_down</mat-icon
-      >
-    </div>
-  </div>
-</section>
-
 <app-nav-desktop
   [isPastOneHundredViewHeight]="isPastOneHundredViewHeight"
   [sectionInView]="sectionInView"
 ></app-nav-desktop>
 
-<div id="pdf-content" class="container">
-  <section id="header" class="header" spyTarget="header">
-    <h1 class="side-accent" wmAnimate="fadeInDown" aos>
-      <a href="#">Matt Blum</a>
-    </h1>
-    <h1 class="side-accent" wmAnimate="fadeInDown" aos delay="250ms">
-      <span><span class="top-accent">&nbsp;</span>Front end Developer</span>
-    </h1>
-  </section>
+<app-landing></app-landing>
 
-  <section id="skills" spyTarget="skills">
-    <mat-card>
-      <app-section-header
-        [title]="'Skills'"
-        [titleBlurb]="'What I Have To Offer'"
-      ></app-section-header>
-      <div class="content">
-        <div class="subsection">
-          <div class="row">
-            <div class="col"><h2>Front end</h2></div>
-          </div>
-          <div class="row">
-            <div
-              class="col-sm-12 col-md-6 col-lg-4"
-              *ngFor="let skill of frontEndSkills"
-            >
-              <div class="row">
-                <div class="col-6 col-md-3">
-                  {{ skill.label }}
-                </div>
-                <div class="col-6 col-md-9">
-                  <mat-icon
-                    class="star"
-                    *ngFor="let item of [].constructor(skill.rating)"
-                    >star</mat-icon
-                  >
-                  <mat-icon
-                    class="star-empty"
-                    *ngFor="let item of [].constructor(5 - skill.rating)"
-                    >star</mat-icon
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+<div class="container">
+  <app-page-header></app-page-header>
 
-        <div class="subsection">
-          <div class="row">
-            <div class="col"><h2>Libraries</h2></div>
-          </div>
-          <div class="row">
-            <div
-              class="col-sm-12 col-md-6 col-lg-4"
-              *ngFor="let skill of librarySkills"
-            >
-              <div class="row">
-                <div class="col-6 col-md-3">
-                  {{ skill.label }}
-                </div>
-                <div class="col-6 col-md-9">
-                  <mat-icon
-                    class="star"
-                    *ngFor="let item of [].constructor(skill.rating)"
-                    >star</mat-icon
-                  >
-                  <mat-icon
-                    class="star-empty"
-                    *ngFor="let item of [].constructor(5 - skill.rating)"
-                    >star</mat-icon
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+  <app-skills-section></app-skills-section>
 
-        <div class="subsection">
-          <div class="row">
-            <div class="col"><h2>Miscellaneous</h2></div>
-          </div>
-          <div class="row">
-            <div
-              class="col-sm-12 col-md-6 col-lg-4"
-              *ngFor="let skill of miscSkills"
-            >
-              <div class="row">
-                <div class="col-6 col-md-3">
-                  {{ skill.label }}
-                </div>
-                <div class="col-6 col-md-9">
-                  <mat-icon
-                    class="star"
-                    *ngFor="let item of [].constructor(skill.rating)"
-                    >star</mat-icon
-                  >
-                  <mat-icon
-                    class="star-empty"
-                    *ngFor="let item of [].constructor(5 - skill.rating)"
-                    >star</mat-icon
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </mat-card>
-  </section>
-
-  <section id="projects" spyTarget="projects">
-    <mat-card>
-      <app-section-header
-        [title]="'Projects'"
-        [titleBlurb]="'Web Apps I\'ve worked on'"
-      ></app-section-header>
-      <div class="subsection">
-        <div class="content">
-          <h2>
-            <a
-              href="https://bull-search-web-dev.azurewebsites.net"
-              target="_blank"
-              >Bull Search Web</a
-            >
-          </h2>
-          <div class="row">
-            <div class="col-md-12 col-lg-4">
-              Bull Search Web is an ongoing project and as such, is in a
-              development environment. It's an
-              <a href="https://angular.io" target="_blank">Angular</a> 9
-              application using
-              <a href="https://ngrx.io" target="_blank">NgRx</a> for state
-              management. The UI and UX was designed by
-              <a href="https://centricconsulting.com/" target="_blank"
-                >Centric Consulting</a
-              >, who I had the pleasure of collaborating with. Ultimately, I
-              created a one-to-one implementation of the UI, UX, and
-              functionality using a mobile first strategy.
-            </div>
-            <ng-template
-              ngFor
-              let-image
-              [ngForOf]="bullSearchWebAlbum"
-              let-i="index"
-            >
-              <div
-                class="col-sm-12 col-md-8 col-lg-5 screenshot"
-                *ngIf="i === 0"
-              >
-                <img
-                  [src]="image.thumb"
-                  (click)="openAlbum(bullSearchWebAlbum, i)"
-                />
-              </div>
-              <div
-                class="col-sm-12 col-md-4 col-lg-3 screenshot"
-                *ngIf="i === 1"
-              >
-                <img
-                  [src]="image.thumb"
-                  (click)="openAlbum(bullSearchWebAlbum, i)"
-                />
-              </div>
-            </ng-template>
-          </div>
-        </div>
-      </div>
-      <div class="subsection">
-        <div class="content bg-alt">
-          <h2>
-            <a href="http://www.accelgen.com" target="_blank"
-              >Accelerated Genetics</a
-            >
-          </h2>
-          <div class="row">
-            <div class="col-md-12 col-lg-4">
-              I was given the task of redesigning the UI, UX, architecture, and
-              SEO. I also closed security holes and improved query performance.
-            </div>
-            <ng-template
-              ngFor
-              let-image
-              [ngForOf]="acceleratedGeneticsAlbum"
-              let-i="index"
-            >
-              <div
-                class="col-sm-12 col-md-8 col-lg-5 screenshot"
-                *ngIf="i === 0"
-              >
-                <img
-                  [src]="image.thumb"
-                  (click)="openAlbum(acceleratedGeneticsAlbum, i)"
-                />
-              </div>
-              <div
-                class="col-sm-12 col-md-4 col-lg-3 screenshot"
-                *ngIf="i === 1"
-              >
-                <img
-                  [src]="image.thumb"
-                  (click)="openAlbum(acceleratedGeneticsAlbum, i)"
-                />
-              </div>
-            </ng-template>
-          </div>
-        </div>
-      </div>
-      <div class="subsection">
-        <div class="content">
-          <h2>
-            <a href="http://search.accelgen.com" target="_blank">Sire Search</a>
-          </h2>
-          <div class="row">
-            <div class="col-md-12 col-lg-4">
-              I designed and implemented its UI and UX. I also setup the state
-              management using Redux.
-            </div>
-            <ng-template
-              ngFor
-              let-image
-              [ngForOf]="sireSearchAlbum"
-              let-i="index"
-            >
-              <div
-                class="col-sm-12 col-md-8 col-lg-5 screenshot"
-                *ngIf="i === 0"
-              >
-                <img
-                  [src]="image.thumb"
-                  (click)="openAlbum(sireSearchAlbum, i)"
-                />
-              </div>
-              <div
-                class="col-sm-12 col-md-4 col-lg-3 screenshot"
-                *ngIf="i === 1"
-              >
-                <img
-                  [src]="image.thumb"
-                  (click)="openAlbum(sireSearchAlbum, i)"
-                />
-              </div>
-            </ng-template>
-          </div>
-        </div>
-      </div>
-      <div class="subsection">
-        <div class="content bg-alt">
-          <h2>
-            <a href="https://shop.accelgen.com" target="_blank">Shop</a>
-          </h2>
-          <div class="row">
-            <div class="col-md-12 col-lg-6">
-              I adapted the UI from
-              <a href="https://selectsiresbeef.com" target="_blank"
-                >Select Sires Beef</a
-              >. It's written in ASP.NET C# and uses JavaScript to communicate
-              with the
-              <a href="https://www.windriverfinancial.com" target="_blank"
-                >WindRiver</a
-              >
-              API.
-            </div>
-            <ng-template
-              ngFor
-              let-image
-              [ngForOf]="shopSearchAlbum"
-              let-i="index"
-            >
-              <div class="col-md-12 col-lg-6 screenshot" *ngIf="i === 0">
-                <img
-                  [src]="image.thumb"
-                  (click)="openAlbum(shopSearchAlbum, i)"
-                />
-              </div>
-            </ng-template>
-          </div>
-        </div>
-      </div>
-      <div class="subsection">
-        <div class="content">
-          <h2>
-            <a href="https://dss.selectsires.com/" target="_blank"
-              >Dairy Sire Search</a
-            >
-          </h2>
-          <div class="row">
-            <div class="col-md-12 col-lg-6">
-              I created a one-to-one implementation of the UI and UX. I
-              developed and enhanced various internal features, limited to
-              employees.
-            </div>
-            <ng-template
-              ngFor
-              let-image
-              [ngForOf]="dairySireSearchAlbum"
-              let-i="index"
-            >
-              <div class="col-md-12 col-lg-6 screenshot" *ngIf="i === 0">
-                <img
-                  [src]="image.thumb"
-                  (click)="openAlbum(dairySireSearchAlbum, i)"
-                />
-              </div>
-            </ng-template>
-          </div>
-        </div>
-      </div>
-    </mat-card>
-  </section>
+  <app-projects-section></app-projects-section>
 
   <section id="career" spyTarget="career">
     <mat-card>
-      <app-section-header
+      <app-header-section
         [title]="'Career'"
         [titleBlurb]="'Experience'"
-      ></app-section-header>
+      ></app-header-section>
       <div class="content">
         <div class="subsection">
           <div class="subsection-header">
@@ -555,10 +221,10 @@
 
   <section id="education" spyTarget="education">
     <mat-card>
-      <app-section-header
+      <app-header-section
         [title]="'Education'"
         [titleBlurb]="'Formal Training'"
-      ></app-section-header>
+      ></app-header-section>
       <div class="row">
         <div class="col-sm-12 col-md-6">
           <div class="content">
