Separate sections into own components

--- a/src/app/components/career-section/career-section.component.html
+++ b/src/app/components/career-section/career-section.component.html
@@ -1,1 +1,201 @@
-<p>career-section works!</p>
+<section id="career" spyTarget="career">
+  <mat-card>
+    <app-header-section
+      [title]="'Career'"
+      [titleBlurb]="'Experience'"
+    ></app-header-section>
+    <div class="content">
+      <div class="subsection">
+        <div class="subsection-header">
+          <span
+            ><h2>
+              <a href="http://www.selectsires.com" target="_blank"
+                >Select Sires</a
+              >
+            </h2>
+            <span>Remote</span>
+          </span>
+          <span>June 2017 to August 2020</span>
+        </div>
+        <div class="subsection-header">
+          <h4>Front end Developer</h4>
+          <h4>
+            Acquired
+            <a href="http://www.accelgen.com" target="_blank"
+              >Accelerated Genetics</a
+            >
+          </h4>
+        </div>
+        <p>
+          Created and maintained various Angular applications. These
+          applications assist geneticists in making breeding decisions, which
+          improve farmers' cattle genetics.
+        </p>
+        <ul>
+          <li>
+            Created and maintained Angular web-applications for, but not limited
+            to:
+            <ul>
+              <li>
+                <a
+                  href="https://bull-search-web-dev.azurewebsites.net"
+                  target="_blank"
+                  >Bull Search Web</a
+                >
+              </li>
+              <li>
+                <a href="http://search.accelgen.com" target="_blank"
+                  >Sire Search</a
+                >
+              </li>
+              <li>
+                <a href="https://dss.selectsires.com/" target="_blank"
+                  >Dairy Sire Search</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            Employed various skills including:
+            <ul>
+              <li>
+                <a href="https://angular.io" target="_blank">Angular</a>
+              </li>
+              <li>
+                <a href="https://www.typescriptlang.org" target="_blank"
+                  >TypeScript</a
+                >
+              </li>
+              <li>
+                <a href="https://www.javascript.com" target="_blank"
+                  >JavaScript</a
+                >
+              </li>
+              <li>
+                <a
+                  href="http://www.ecma-international.org/ecma-262/6.0"
+                  target="_blank"
+                  >ES6</a
+                >
+              </li>
+              <li><a href="https://sass-lang.com">SCSS</a>/CSS3</li>
+              <li><a href="https://ngrx.io" target="_blank">NgRx</a></li>
+              <li>
+                <a href="https://redux.js.org" target="_blank">Redux</a>
+              </li>
+              <li>
+                <a href="https://material.angular.io" target="_blank"
+                  >Material Design</a
+                >
+              </li>
+              <li>
+                <a href="https://getbootstrap.com/" target="_blank"
+                  >Bootstrap</a
+                >
+              </li>
+              <li>
+                <a href="https://www.primefaces.org/primeng" target="_blank"
+                  >PrimeNG</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            Responsible for Front end development, website optimization, and
+            security
+          </li>
+          <li>
+            Developed tools for systems and employees to generate automated
+            reporting
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="content bg-alt">
+      <div class="subsection">
+        <div class="subsection-header">
+          <span
+            ><h2>
+              <a href="https://www.accelgen.com" target="_blank"
+                >Accelerated Genetics</a
+              >
+            </h2>
+            <span>Remote</span>
+          </span>
+          <span>January 2015 to May 2017</span>
+        </div>
+        <h4>Full-Stack Web Developer</h4>
+        <ul>
+          <li>
+            Created, managed, and maintained IIS websites, web-applications, and
+            web services for, but not limited to:
+            <ul>
+              <li>
+                <a href="https://www.accelgen.com" target="_blank"
+                  >Accelerated Genetics</a
+                >
+              </li>
+              <li>
+                <a href="https://shop.accelgen.com" target="_blank"
+                  >Shop - Accelerated Genetics</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            Employed various skills including:
+            <ul>
+              <li>ASP.NET</li>
+              <li>C#</li>
+              <li>SQL</li>
+              <li>
+                <a href="https://www.javascript.com" target="_blank"
+                  >JavaScript</a
+                >
+              </li>
+              <li><a href="https://sass-lang.com">SCSS</a>/CSS3</li>
+              <li>
+                <a href="https://getbootstrap.com/" target="_blank"
+                  >Bootstrap</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            Maintained and optimized SQL Server databases to create, maintain,
+            and execute data upload scripts to handle weekly, monthly, and
+            triannual data uploads
+          </li>
+          <li>
+            Front end development – employed Bootstrap and JavaScript to create
+            a clear, impactful presentation
+          </li>
+          <li>
+            Responsible for back end development, website optimization and
+            security
+          </li>
+          <li>
+            Successfully redesigned
+            <a href="http://www.accelgen.com" target="_blank"
+              >Accelerated Genetics</a
+            >
+          </li>
+          <li>
+            Successfully developed and launched the ecommerce web-application
+            <a href="https://shop.accelgen.com" target="_blank"
+              >Shop - Accelerated Genetics</a
+            >
+          </li>
+          <li>
+            Employed project management skills to manage specific priorities,
+            set deadlines, and adhere to budget constraints
+          </li>
+          <li>
+            Developed tools for systems and employees to generate automated
+            reporting
+          </li>
+        </ul>
+      </div>
+    </div>
+  </mat-card>
+</section>
