--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -13,4 +13,5 @@
   <app-projects-section></app-projects-section>
   <app-career-section></app-career-section>
   <app-education-section></app-education-section>
+  <app-footer></app-footer>
 </div>
