Remove all meaningful content from app.component.html/ts and add nav-top-top component

--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -6,6 +6,9 @@
   [isPastOneHundredViewHeight]="isPastOneHundredViewHeight"
   [sectionInView]="sectionInView"
 ></app-nav-desktop>
+<app-nav-to-top
+  [isPastOneHundredViewHeight]="isPastOneHundredViewHeight"
+></app-nav-to-top>
 <app-landing></app-landing>
 <div class="container">
   <app-page-header></app-page-header>
